# Miniwin

./: .gitignore  CMakeLists.txt  README.md  ali3528.sh  ali3528_mtitoolchain.cmake  gx3213.sh  montage-toolchain.cmake  montage.sh  mtienv.sh  national-toolchain.cmake  x86build.sh
src/apps/ntvplus/: .gitignore  CMakeLists.txt  Irdccaserviceliststatus.cc  appmenus.h  bookingeditor.cc  channeleditor.cc  channellist.cc  channelpf.cc  channelsearch.cc  dtveventsource.cc  dtveventsource.h  dvbapp.cc  dvbapp.h  irdccaLoaderStatus.cc  irdccamenu.cc  lyrics.cc  lyrics.h  lyricsview.cc  lyricsview.h  main.cc  mainmenu.cc  manual_search.cc  multimedia.cc  netsetting.cc  netsetting.h  ntvcommon.cc  ntvcommon.h  ntvnavwindow.cc  ntvnavwindow.h  ntvplayerwindow.cc  ntvplayerwindow.h  ntvutils.cc  ntvutils.h  ntvwindow.cc  ntvwindow.h  playcontrol.cc  sat_tp_editor.cc  sattpmanager.cc  searchresultwindow.cc  set_actions.cc  (+7 more)
src/apps/ntvplus/acs/: CAEventSource.h  CMakeLists.txt  main.c  stub_main.c  va2ngl.cc
src/apps/ntvplus/assets/: irdccamenu.json  satelliteditor.json  settings.json  settings.pref
src/apps/ntvplus/irdetocca/: CMakeLists.txt  CMakeLists.txtbak  UniversalClient.c  UniversalClient.ccbak  UniversalClient_Core_SPI.c  UniversalClient_PVR.c  UniversalClient_SPI.c  UniversalClient_Stdlib.c
src/apps/samples/: 2048.cc  CMakeLists.txt  animation.cc  helloworld.cc  loopersample.cc  multiwindow.cc  simplewin.cc
src/gui/: CMakeLists.txt  gui_features.h.cmake
src/gui/cairomm/: bitmap.cc  bitmap.h  cairo_jpg.cc  cairo_jpg.h  cairommconfig.h  context.cc  context.h  context_private.h  context_surface_ngl.cc  device.h  fontface.cc  fontface.h  fontoptions.h  ngl_surface.cc  ngl_surface.h  pattern.h  refptr.h  region.cc  region.h  surface.cc  surface.h
src/gui/core/: app.cc  app.h  assets.cc  assets.h  asynsource.cc  asynsource.h  canvas.cc  canvas.h  colorstatelist.h  complexcolor.h  fontmanager.cc  fontmanager.h  graph_context.cc  graph_context.h  graph_device.cc  graph_device.h  inputdevice.cc  inputdevice.h  inputeventlabel.h  inputeventsource.cc  inputeventsource.h  interpolators.cc  interpolators.h  lz4stream.cc  preferences.cc  preferences.h  rect.cc  rect.h  scheduler.cc  scheduler.h  theme.cc  theme.h  uievents.cc  uievents.h  uieventsource.cc  uieventsource.h  utf8.h  windowmanager.cc  ziparchive.cc  zipstream.cc
src/gui/core/cache/: cache.cc  cache.h
src/gui/core/svg/: isvgRenderer.cc
src/gui/looper/: EventLoop.cpp  EventLoop.h  EventSource.h  FileEvents.h  FileSource.h  GenericSignalSource.cpp  GenericSignalSource.h  IdleSource.h  SignalFD.cpp  SignalFD.h  SignalSource.cpp  SignalSource.h  TimeoutSource.cpp  TimeoutSource.h  TimerFD.cpp  TimerFD.h  Utility.h
src/gui/luabinding/: app.cc
src/gui/private/: lz4frame.h  lz4stream.h  windowmanager.h  ziparchive.h  zipstream.h
src/gui/tests/: CMakeLists.txt  app_tests.cc  dialog_tests.cc  dtv_tests.cc  image_unittests.cc  listview_tests.cc  motion_tests.cc  preference_tests.cc  scheduler_tests.cc  surface_unittests.cc  testmain.cc  widget_tests.cc  window_tests.cc
src/gui/views/: abslistview.cc  abslistview.h  absseekbar.cc  absseekbar.h  button.cc  button.h  channelepgview.cc  channelepgview.h  clockview.cc  clockview.h  desktop.cc  desktop.h  dialog.cc  dialog.h  docview.cc  docview.h  edittext.cc  edittext.h  expandablelistview.cc  expandablelistview.h  gridview.cc  gridview.h  groupview.cc  groupview.h  imagebutton.cc  imagebutton.h  imageframeview.cc  imageframeview.h  imageview.cc  imageview.h  keyboard.cc  keyboard.h  keyboardview.cc  keyboardview.h  layout.cc  layout.h  linearlayout.cc  linearlayout.h  listview.cc  listview.h  (+27 more)
src/modules/upnp/: CMakeLists.txt  renderimpl.cc  renderimpl.h
src/porting/: CMakeLists.txt  ngl_log.c  ngl_rfb.c
src/porting/ali3528/: ngl_disp.c  ngl_dmx.cc  ngl_dsc.c  ngl_graph.c  ngl_ir.cc  ngl_mediaplayer.c  ngl_msgq.c  ngl_os.c  ngl_panel.c  ngl_pvr.c  ngl_smc.c  ngl_snd.c  ngl_timer.c  ngl_tuner.c  ngl_video.c  platform.cmake
src/porting/gx3213/: key.map  ngl_disp.c  ngl_dmx.c  ngl_dsc.c  ngl_graph.c  ngl_ir.cc  ngl_mediaplayer.c  ngl_misc.c  ngl_os.c  ngl_smc.c  ngl_snd.c  ngl_timer.c  ngl_tuner.c  ngl_video.c  platform.cmake
src/porting/include/: ngl_disp.h  ngl_dmx.h  ngl_dsc.h  ngl_errors.h  ngl_graph.h  ngl_input.h  ngl_log.h  ngl_mediaplayer.h  ngl_misc.h  ngl_msgq.h  ngl_nvm.h  ngl_os.h  ngl_panel.h  ngl_pvr.h  ngl_smc.h  ngl_snd.h  ngl_timer.h  ngl_tuner.h  ngl_types.h  ngl_video.h
src/porting/montage/: CMakeLists.txt  ngl_disp.c  ngl_dmx.c  ngl_dsc.c  ngl_gx_graph.c  ngl_ir.cc  ngl_mediaplayer.c  ngl_msgq.c  ngl_os.c  ngl_pvr.c  ngl_smc.c  ngl_snd.c  ngl_timer.c  ngl_tuner.c  ngl_video.c  platform.cmake
src/porting/tests/: CMakeLists.txt  av_unittests.cc  dmx_unittests.cc  event_unittests.cc  graph_unittest.cc  input_unittests.cc  mem_unittests.cc  msgq_unittests.cc  mutex_unittests.cc  sem_unittests.cc  testmain.cc  timer_unittests.cc  tspes_unittests.cc  tuner_unittests.cc  tvtestutils.cc
src/porting/x86/: dmxreader.cc  dmxreader.h  ngl_disp.c  ngl_dmx.c  ngl_dsc.c  ngl_fb_graph.c  ngl_graph.c  ngl_gtk_graph.c  ngl_ir.cc  ngl_mediaplayer.c  ngl_msgq.c  ngl_os.c  ngl_panel.c  ngl_pvr.c  ngl_snd.c  ngl_timer.c  ngl_tuner.c  ngl_video.c  ngl_x11_graph.c  platform.cmake
src/tools/: CMakeLists.txt  alllans.json  ara.json  freq.ini  lansplit  lansplit.cc  main.cc  tssender.cc  uvreceiver.cc
src/tvmodules/dsmcc-receive/: CMakeLists.txt  dsmcc.c  dsmcc.h
src/tvmodules/epg/: CMakeLists.txt  descriptors.cc  descriptors.h  destags.h  diseqc.c  diseqc.h  dsmcc.cc  dsmcc.h  dtvplayer.cc  dvbepg.cc  dvbepg.h  favorite.cc  favorite.h  lrucache.h  satellite.cc  satellite.h  satellites.json  si_table.cc  si_table.h  tvdata.cc  tvdata.h  utils.cc  utils.h
src/tvmodules/epg/tests/: CMakeLists.txt  channels_tests.cc  epg_tests.cc  favorites_tests.cc  (+5 more)
src/tvmodules/subttx/: CMakeLists.txt  ccview.cc  ccview.h  dvbsub.c  dvbsub.h  main.cc  subtitleview.cc  subtitleview.h  teletextview.cc  teletextview.h  tvtestutils.cc  vbiview.cc  vbiview.h  vlc_bits.h
(+133 files in other folders)
